fix: improve contrast of pitch black theme

--- a/src/scss/themes/pitchblack.scss
+++ b/src/scss/themes/pitchblack.scss
@@ -1,7 +1,7 @@
 $main-theme-color: #000;
 $body-bg-color: #000;
 $main-bg-color: #000;
-$anchor-color: lighten($main-theme-color, 90%);
+$anchor-color: #fafaff;
 $main-text-color: #fafaff;
 $border-color: #222;
 $secondary-text-color: #f6f6ff;
